<resources>
    <string name="app_name">BLOG</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="button_login_in">ВОЙТИ</string>
    <string name="button_registration">РЕГИСТРАЦИЯ</string>
    <string name="text_forgot_password">Забыли пароль?</string>
    <string name="button_send_link">ОТПРАВИТЬ ПАРОЛЬ</string>
    <string name="logo_description">Логотип компании</string>
    <string name="hint_nickname">Никнейм пользователя</string>
    <string name="button_save_user">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="avatar_author">Аватар пользователя</string>
    <string name="description_forgot_password">Введите ваш актуальный e-mail</string>
    <string name="description_add_photo">Прикрепленная фотография</string>
    <string name="description_add_favourite">Кнопка добавить в избранное</string>
    <string name="comment_description">Оставить комментарий</string>
    <string name="share_description">Поделиться постом</string>
    <string name="title_profile">Профиль</string>
    <string name="content_photo_profile">Фотография профиля</string>
    <string name="button_log_out">ВЫЙТИ</string>
    <string name="favourite_text">Избранное</string>
    <string name="textView_myPost">Посты</string>
    <string name="favourite_textView">Избранные</string>
    <string name="text_version">Версия</string>
    <string name="toast_send_password">Информация успешно отправлена на указанный e-mail</string>
    <string name="fill_all_fields_toast">Заполните все поля</string>
    <string name="fill_email_toast">Введите e-mail</string>
    <string name="fill_password_toast">Введите пароль</string>
    <string name="fill_email_passord_toast">Заполните e-mail и пароль</string>
    <string name="fill_nickName_toast">Укажите никнейм</string>
    <string name="content_image_back">Кнопка для возврата на главный экран</string>
    <string name="button_add_photo">ИЗМЕНИТЬ ФОТО ПРОФИЛЯ</string>
    <string name="hint_text_comment">Оставить комментарий...</string>
    <string name="registration_activity">Регистрация</string>
    <string name="add_post_activity">Новый пост</string>
    <string name="login_activity">Авторизация</string>
    <string name="forgot_password_activity">Восстановление пароля</string>
    <string name="add_title_hint">Заголовок</string>
    <string name="add_article_hint">Текст</string>
    <string name="save_post_hint">ОПУБЛИКОВАТЬ</string>
    <string name="item_menu_favourite">Добавить в избранное</string>
    <string name="item_menu_share">Поделиться</string>
    <string name="delete_post">Удалить</string>
    <string name="hint_comment">Прокомментировать</string>
    <string name="title_comment">Комментарии</string>
    <string name="description_photo_profile">Фото профиля</string>
    <string name="description_button_add_post">Добавить новый пост</string>
    <string name="text_view_none_comment">Оставьте первый комментарий…</string>
    <string name="comment_is_release">Комментарий опубликован</string>
    <string name="attention_wrong">Произошла ошибка, попробуйте ещё раз</string>
    <string name="toast_post_published">Пост опубликован</string>
    <string name="dateFormat">dd.MM.yyyy HH:mm</string>
    <string name="textView_add_favourite">Добавить в избранное</string>
    <string name="number_like">0</string>
    <string name="main_Activity_Title">Blog</string>
    <string name="failed_for_load_image">Ошибка при загрузке изображения</string>
    <string name="showPassword_description">Показать введеный пароль</string>
    <string name="overflow_Button_Description">Меню для удаления, добавления в избранное поста</string>
    <string name="comment_Menu_Description">Меню для удаления комментария</string>
    <string name="post_delete">Пост удален</string>
    <string name="confirm_delete_post_title">Удаление поста</string>
    <string name="confirm_delete_post_message">Вы уверены, что хотите удалить этот пост?</string>
    <string name="confirm_delete_post_yes">Да</string>
    <string name="confirm_delete_post_no">Нет</string>
    <string name="post_added_favourite">Пост добавлен в избранное</string>
    <string name="comment_delete">Комментарий удален</string>
    <string name="user_has_registration">Пользователь зарегестрирован</string>
    <string name="confirm_delete_comment_title">Удаление комментария</string>
    <string name="confirm_delete_comment_message">Вы уверены, что хотите удалить этот комментарий?</string>
    <string name="confirm_delete_comment_yes">Да</string>
    <string name="confirm_delete_comment_no">Нет</string>
    <string name="failled_image_permission">Permission Denied</string>
    <string name="description_like">Поставить лайк</string>
    <string name="description_dislike">Поставить дизлайк</string>
    <string name="text_like">Лайки</string>
    <string name="description_button_add_comment">Добавить новый комментарий</string>
    <string name="list_comments_has_none">Список комментариев пока пуст...</string>
    <string name="textView_start_discussion">Начало обсуждения</string>
    <string name="confirm_delete_favourite_title">Удаление из избранного</string>
    <string name="confirm_delete_favourite_messege">Вы действительно хотите удалить этот пост из избранного?</string>
    <string name="confirm_delete_favourite_yes">Да</string>
    <string name="favourite_delete">Пост удален из избранного</string>
    <string name="confirm_delete_favourite_no">Нет</string>
    <string name="change_nick_user">Изменить ник пользователя</string>
    <string name="button_editor">РЕДАКТИРОВАТЬ</string>
    <string name="change_nickname">Сменить никнейм</string>
    <string name="nick_sucsess_change">\"Ник успешно изменен, \"</string>
    <string name="nick_change_ok">ОК</string>
    <string name="nick_change_canceled">Отмена</string>
    <string name="edit_saved">Изменения сохранены</string>
    <string name="text_view_show_full">ПОКАЗАТЬ ПОЛНОСТЬЮ</string>
    <string name="item_edit_post">Редактировать пост</string>
    <string name="text_view_signature">design and development by petr somar</string>
    <string name="item_add_comment">Оставить комментарий</string>
</resources>