<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/gray"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDataRelease"
            tools:text="TITLE" />

        <TextView
            android:id="@+id/textViewArticle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            tools:text="Article" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewPhotoAuthor"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="author" />

        <ImageView
            android:id="@+id/imageViewPhotoAuthor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/avatar_author"
            android:cropToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPoster" />

        <TextView
            android:id="@+id/textViewDataRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPhotoAuthor"
            tools:text="19.09.2022" />

        <ImageView
            android:id="@+id/imageViewMenuPost"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_dots"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewComment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/comment_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewLine"
            tools:src="@android:drawable/sym_action_chat" />

        <TextView
            android:id="@+id/textViewComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint_comment"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/imageViewComment"
            app:layout_constraintTop_toBottomOf="@id/viewLine" />

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_add_photo"
            app:layout_constraintTop_toBottomOf="@id/textViewArticle"
            tools:src="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>